# InformationTheoryFeatureSelection

./: CMakeLists.txt  README.md
FeatureSelector/: CMakeLists.txt  main.cpp
MutualInformationLib/: CMakeLists.txt
MutualInformationLib/include/mutualinformationlib/: Feature.h  JointProbabilityState.h  ProbabilityState.h  mdlp_binning.h  mi_lib.h  mutual_information_calculations.h
